--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.38.0
-youtube_transcript_api==0.6.1
-openai==0.27.8
-google-api-python-client==2.88.0
-requests==2.31.0
-pillow==9.5.0
+streamlit
+youtube_transcript_api
+openai
+google-api-python-client
+requests
