--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-youtube_transcript_api
-openai==0.28
-google-api-python-client
-requests
+streamlit==1.22.0
+google-api-python-client==2.86.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+openai==0.27.8
+aiohttp==3.8.4
+python-dateutil==2.8.2
