--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 streamlit==1.22.0
-openai==0.27.6
+youtube_transcript_api==0.6.0
+openai==0.27.8
 google-api-python-client==2.86.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-requests==2.30.0
-python-dateutil==2.8.2
-aiohttp==3.7.4
-requests==2.30.0
+requests==2.31.0
+python-dotenv==1.0.0
+asyncio==3.4.3
