--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.22.0
-google-api-python-client==2.86.0
-youtube_transcript_api==0.6.0
-openai==0.27.8
-requests==2.31.0
-selenium==4.9.1
-beautifulsoup4==4.12.2
+streamlit
+openai
+google-api-python-client
+youtube-transcript-api
+beautifulsoup4
+selenium
+requests
