--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-openai
-google-api-python-client
-youtube-transcript-api
-beautifulsoup4
-selenium
-requests
+streamlit==1.22.0
+openai==0.27.6
+google-api-python-client==2.86.0
+youtube-transcript-api==0.5.0
+requests==2.28.2
+python-dateutil==2.8.2
+aiohttp==3.8.4
