--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,13 @@ youtube-transcript-api==0.5.0
 requests==2.28.2
 python-dateutil==2.8.2
 aiohttp==3.7.4
+streamlit==1.22.0
+openai==0.27.6
+google-api-python-client==2.86.0
+youtube-transcript-api==0.5.0
+requests==2.28.2
+beautifulsoup4==4.11.2
+selenium==4.9.0
+webdriver-manager==3.8.6
+asyncio==3.4.3
+python-dateutil==2.8.2
