--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ youtube-transcript-api==0.6.0
 selenium==4.9.1
 beautifulsoup4==4.12.2
 requests==2.30.0
-aiohttp==3.8.4
+aiohttp==3.8.4 --no-build-isolation
