--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.24.0
+streamlit==1.22.0
 openai==0.27.8
 google-api-python-client==2.88.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.10.0
 youtube-transcript-api==0.6.1
+pillow==9.5.0
